--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "license": "MIT",
     "dependencies": {
+        "@angular/animations": "^7.0.4",
+        "@angular/cdk": "^7.0.4",
         "@angular/common": "^7.0.1",
         "@angular/compiler": "^7.0.1",
         "@angular/core": "^7.0.1",
@@ -18,7 +20,11 @@
         "@angular/platform-browser": "^7.0.1",
         "@angular/platform-browser-dynamic": "^7.0.1",
         "@angular/router": "^7.0.1",
+        "@ng-bootstrap/ng-bootstrap": "^6.0.0",
         "core-js": "^2.5.7",
+        "font-awesome": "^4.7.0",
+        "primeicons": "^2.0.0",
+        "primeng": "^7.1.3",
         "rxjs": "^6.3.3",
         "zone.js": "^0.8.26"
     },
